# watermarker

./: LICENSE  README.md  setup.cfg
src/watermarker/: __init__.py  command_line.py
