[metadata]
# replace with your username:
name = watermarker-Darkclainer
version = 1.0.0
author = Darkclainer
author_email = Darkclainer@gmail.com
description = Small utility to watermark your images with a text
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/darkclainer/watermarker
project_urls =
    Bug Tracker = https://github.com/darkclainer/watermarker/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    Pillow >=8.0.0

[options.entry_points]
console_scripts =
    watermarker = watermarker.command_line:main

[options.packages.find]
where = src
